test/should-fail/jfxc4173d.fx
/**
 * Regress test for JFXC-4173.
 *
 *  Improved support for forward references
 *
 * @compilearg -XDfwdRefOpt=interpolate
 * @compile jfxc4173sub.fx
 * @test/warning
 */
